Create static libs from objects
Creates static libraries from all object files; split up by folder. This
allows for easier linking

--- a/factories/Makefile
+++ b/factories/Makefile
@@ -1,19 +1,28 @@
 GCC ?=g++
+AR ?=ar
 CXXFLAGS ?=--std=c++17 -I../
+ARFLAGS ?=rcs
 OBJDIR=./obj
+LIBDIR=./lib
 
+LIBS=${LIBDIR}/libfactories.a
 HEADERS=${OBJDIR}/colortableheaderfactory.o ${OBJDIR}/bitmapcoreheaderfactory.o ${OBJDIR}/bitmapheaderfactory.o ${OBJDIR}/bitmapfactory.o ${OBJDIR}/elfheaderfactory.o ${OBJDIR}/sectionheaderfactory.o ${OBJDIR}/programheaderfactory.o
 
-all: ${OBJDIR} ${HEADERS}
+all: ${OBJDIR} ${LIBDIR} ${HEADERS} ${LIBS}
 
 clean:
 	rm -f ${HEADERS}
-	rm -Rf ${OBJDIR}
+	rm -Rf ${OBJDIR} ${LIBDIR}
 	$(MAKE) -C tests clean
 
 ${OBJDIR}:
 	mkdir ${OBJDIR}
 
+${LIBDIR}:
+	mkdir ${LIBDIR}
+
 ${OBJDIR}/%.o: %.cc
 	$(GCC) ${CXXFLAGS} -o $@ -c $<
 
+${LIBDIR}/lib%.a: ${HEADERS}
+	$(AR) ${ARFLAGS} $@ $?
