--- a/headers/Makefile
+++ b/headers/Makefile
@@ -1,10 +1,14 @@
 GCC=g++
+AR ?=ar
 CXXFLAGS+=-I../
+ARFLAGS ?=rcs
 OBJDIR=./obj
+LIBDIR=./lib
 
+LIBS=${LIBDIR}/libheaders.a
 HEADERS=${OBJDIR}/bitmapheader.o ${OBJDIR}/bitmapcoreheader.o ${OBJDIR}/colortableheader.o ${OBJDIR}/elfheader.o ${OBJDIR}/sectionheader.o ${OBJDIR}/programheader.o
 
-all: ${OBJDIR} ${HEADERS}
+all: ${OBJDIR} ${LIBDIR} ${HEADERS} ${LIBS}
 
 clean:
 	rm -f ${HEADERS}
@@ -14,6 +18,11 @@ clean:
 ${OBJDIR}:
 	mkdir ${OBJDIR}
 
+${LIBDIR}:
+	mkdir ${LIBDIR}
+
 ${OBJDIR}/%.o: %.cc
 	$(GCC) ${CXXFLAGS} -o $@ -c $<
 
+${LIBDIR}/lib%.a: ${HEADERS}
+	$(AR) ${ARFLAGS} $@ $?
